// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCode > should generate code for %1 two-integration-trigger.ts > triggers/linear_comment_event_trigger.py 1`] = `
"from vellum.workflows.triggers import IntegrationTrigger


class LinearIntegrationTrigger(IntegrationTrigger):
    action: str
    data: str
    type: str
    url: str

    class Config(IntegrationTrigger.Config):
        provider = "COMPOSIO"
        integration_name = "LINEAR"
        slug = "LINEAR_COMMENT_EVENT_TRIGGER"
        setup_attributes = {"team_id": "dfasadf"}

    class Display(IntegrationTrigger.Display):
        label = "Linear Integration Trigger"
        x = 100
        y = 200
        z_index = 1
        icon = "linear"
        color = "#4A154B"
"
`;

exports[`generateCode > should generate code for %1 two-integration-trigger.ts > triggers/linear_comment_event_trigger_1.py 1`] = `
"from vellum.workflows.triggers import IntegrationTrigger


class LinearIntegrationTrigger2(IntegrationTrigger):
    action: str
    data: str
    type: str
    url: str

    class Config(IntegrationTrigger.Config):
        provider = "COMPOSIO"
        integration_name = "LINEAR"
        slug = "LINEAR_COMMENT_EVENT_TRIGGER"
        setup_attributes = {"team_id": "dfasadf"}

    class Display(IntegrationTrigger.Display):
        label = "Linear Integration Trigger 2"
        x = 300
        y = 200
        z_index = 1
        icon = "linear"
        color = "#4A154B"
"
`;

exports[`generateCode > should generate code for %1 two-integration-trigger.ts > workflow.py 1`] = `
"from vellum.workflows import BaseWorkflow

from .nodes.my_final_output import MyFinalOutput
from .triggers.linear_comment_event_trigger import LinearIntegrationTrigger
from .triggers.linear_comment_event_trigger_1 import LinearIntegrationTrigger2


class Workflow(BaseWorkflow):
    graph = {
        LinearIntegrationTrigger >> MyFinalOutput,
        LinearIntegrationTrigger2 >> MyFinalOutput,
    }

    class Outputs(BaseWorkflow.Outputs):
        result = MyFinalOutput.Outputs.value
"
`;
